Apply Checkstyle fixes to ExecutionModeUtils.java
- Reorganized imports to comply with CustomImportOrder (Third party, then standard java).
- Added meaningful Javadoc comments to the class and all methods.
- Fixed line length violation.
- Verified with `mvn checkstyle:check` and `mvn compile`.